Robots.txt and sitemap.xml

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ title : prisconapoli.github.com
 #tagline: Site Tagline
 author :
   name : Prisco Napoli
+  url: 'http://prisconapoli.github.io'
   email : prisco.napoli@gmail.com
   github : prisconapoli
 #  twitter : username
