--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-pygments: true
+highlighter: pygments
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -14,6 +14,7 @@ author :
   name : Prisco Napoli
   email : prisco.napoli@gmail.com
   github : prisconapoli
+
 #  twitter : username
 #  feedburner : feedname
 # The production_url is only used when full-domain names are needed
@@ -99,7 +100,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-56615452-1'
     getclicky :
       site_id : 
     mixpanel :
